tests/spec/compile-fail/163_static_vector_global_destructor.zn
// category: compile-fail
// stage: mvp
// milestone: M5
// profile: hosted
// purpose: static owned collections cannot require exit-time global destruction

module tests.fail.staticVectorGlobalDestructor;

static Bytes: Vector<U8>; // expected-error[E0801]: static initializer cannot require exit-time global destruction; use explicit runtime-owned state
